[project]
name = "openenv-support-ops"
version = "0.1.0"
description = "OpenEnv Support Ops Agent"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"